--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ Vitesse: 0 kts</pre>
     </div>
   </div>
 
-  <script src="renderer.js"></script>
+
+  <script src="./renderer.js"></script>
 </body>
 </html>
