--- a/index.html
+++ b/index.html
@@ -1,111 +1,118 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>ACARS Air Corsica Virtuel</title>
-  <link rel="stylesheet" href="assets/style.css">
-  <link rel="icon" href="assets/logo.ico">
+  <link rel="icon" href="assets/logo.ico" />
+  <link rel="stylesheet" href="assets/style.css" />
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 </head>
+
 <body>
-
   <div id="app">
-
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-header">
-        <img src="assets/logo.png" alt="Logo Air Corsica" class="logo">
+        <img src="assets/logo.png" alt="Logo Air Corsica" class="logo" />
         <h2>ACARS</h2>
         <p class="version">v1.0.9</p>
       </div>
 
       <nav class="menu">
-        <button data-section="dashboard" class="menu-item active">Tableau de bord</button>
-        <button data-section="flights" class="menu-item">Vols assignés</button>
-        <button data-section="chat" class="menu-item">Chat pilote</button>
-        <button data-section="settings" class="menu-item">Paramètres</button>
-        <button id="logoutBtn" class="logout">Déconnexion</button>
+        <button data-section="dashboard" class="menu-item active">📊 Tableau de bord</button>
+        <button data-section="flights" class="menu-item">🛫 Vols assignés</button>
+        <button data-section="chat" class="menu-item">💬 Chat pilote</button>
+        <button data-section="settings" class="menu-item">⚙️ Paramètres</button>
       </nav>
+
+      <div class="bottom-menu">
+        <button id="logoutBtn" class="logout">Déconnexion</button>
+      </div>
     </aside>
 
     <!-- Contenu principal -->
     <main class="main-content">
       <header class="topbar">
-        <span id="pilotName">--</span>
-        <span id="status" class="status online">🟢 Connecté</span>
+        <div class="pilot-info">
+          <span id="pilotName">--</span>
+          <span id="status" class="status online">🟢 Connecté</span>
+        </div>
       </header>
 
-<section id="dashboard" class="section active">
-  <h2>Tableau de bord</h2>
+      <!-- Tableau de bord -->
+      <section id="dashboard" class="section active">
+        <h2>Tableau de bord</h2>
 
-  <div class="stats-grid">
-    <div class="stat"><strong>⏱️ Durée:</strong> <span id="stat-duration">0:00</span></div>
-    <div class="stat"><strong>📍 Distance:</strong> <span id="stat-distance">0 nm</span></div>
-    <div class="stat"><strong>💨 Vitesse max:</strong> <span id="stat-maxspeed">0 kts</span></div>
-    <div class="stat"><strong>🏔️ Altitude max:</strong> <span id="stat-maxalt">0 ft</span></div>
-    <div class="stat"><strong>⛽ Carburant:</strong> <span id="stat-fuel">--</span></div>
-    <div class="stat"><strong>✈️ Phase:</strong> <span id="stat-phase">Aucune</span></div>
-  </div>
+        <div class="grid-2">
+          <div class="card stats">
+            <h3>Statistiques du vol</h3>
+            <ul class="stats-list">
+              <li><strong>⏱️ Durée :</strong> <span id="stat-duration">0:00</span></li>
+              <li><strong>📍 Distance :</strong> <span id="stat-distance">0 nm</span></li>
+              <li><strong>💨 Vitesse max :</strong> <span id="stat-maxspeed">0 kts</span></li>
+              <li><strong>🏔️ Altitude max :</strong> <span id="stat-maxalt">0 ft</span></li>
+              <li><strong>⛽ Carburant :</strong> <span id="stat-fuel">--</span></li>
+              <li><strong>✈️ Phase :</strong> <span id="stat-phase">Aucune</span></li>
+            </ul>
+          </div>
 
-  <div class="card">
-    <h3>Carte de vol en direct</h3>
-    <div id="map" style="height:400px; border-radius:10px; margin-bottom:1rem;"></div>
-  </div>
+          <div class="card map-card">
+            <h3>Carte de vol en direct</h3>
+            <div id="map" class="map"></div>
+          </div>
+        </div>
 
-  <div class="card">
-    <h3>Statut du vol</h3>
-    <pre id="flightData">En attente du simulateur...</pre>
-    <p id="pirepStatus"></p>
-    <button id="sendPirepBtn" class="btn hidden">✈️ Envoyer PIREP</button>
-  </div>
+        <div class="grid-2">
+          <div class="card">
+            <h3>Statut du vol</h3>
+            <pre id="flightData">En attente du simulateur...</pre>
+            <p id="pirepStatus"></p>
+            <button id="sendPirepBtn" class="btn hidden">✈️ Envoyer le PIREP</button>
+          </div>
 
-  <div class="card">
-    <h3>Logs du vol</h3>
-    <div id="flightLog" class="log-container"></div>
-  </div>
-</section>
-
-<!-- Leaflet CSS -->
-<link
-  rel="stylesheet"
-  href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  integrity="sha256-sA+4rY2JWn4EWOw2tO7QlWv6Fp+zE67Dox9N5Q0X+3s="
-  crossorigin=""
-/>
-
-<!-- Leaflet JS -->
-<script
-  src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-  integrity="sha256-SmSRNkpqhtpJUZ+rbFybAi1uhb4onV0qgkNQe3pPzZU="
-  crossorigin=""
-></script>
-
-
-      <section id="flights" class="section">
-        <h2>Vols assignés</h2>
-        <div id="flightsList" class="card">
-          <p>Chargement des vols...</p>
+          <div class="card">
+            <h3>Logs du vol</h3>
+            <div id="flightLog" class="log-container"></div>
+          </div>
         </div>
       </section>
 
+      <!-- Vols assignés -->
+      <section id="flights" class="section">
+        <h2>Vols assignés</h2>
+        <div id="flightsList" class="card">
+          <p>Chargement des vols en cours...</p>
+        </div>
+      </section>
+
+      <!-- Chat pilote -->
       <section id="chat" class="section">
-        <h2>Chat Pilote</h2>
+        <h2>Chat pilote</h2>
         <div class="chat-container">
           <div id="chatMessages" class="chat-messages"></div>
           <div class="chat-input">
-            <input id="chatMessageInput" type="text" placeholder="Votre message...">
+            <input id="chatMessageInput" type="text" placeholder="Votre message..." />
             <button id="sendChatBtn">Envoyer</button>
           </div>
         </div>
       </section>
 
+      <!-- Paramètres -->
       <section id="settings" class="section">
         <h2>Paramètres</h2>
         <p>Clé API : <span id="apiKeyDisplay">Non définie</span></p>
       </section>
     </main>
-
   </div>
 
-  <script src="renderer.js"></script>
+  <script
+    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-SmSRNkpqhtpJUZ+rbFybAi1uhb4onV0qgkNQe3pPzZU="
+    crossorigin=""
+  ></script>
+
+<script src="./node_modules/axios/dist/axios.min.js"></script>
+<script src="./node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
+<script src="renderer.js"></script>
 </body>
 </html>
