--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>ACARS Air Corsica Virtuel</title>
   <link rel="icon" href="assets/logo.ico" />
   <link rel="stylesheet" href="assets/style.css" />
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 </head>
 
 <body>
