--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
   <meta charset="UTF-8" />
   <title>ACARS Air Corsica Virtuel</title>
 
-  <!-- Icône + styles -->
   <link rel="icon" href="assets/logo.ico" />
   <link rel="stylesheet" href="assets/style.css" />
-
-  <!-- Leaflet (sans integrity pour éviter blocages) -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 
@@ -17,10 +14,9 @@
     <!-- ============== Sidebar ============== -->
     <aside class="sidebar">
       <div class="sidebar-header">
-        <!-- Place bien assets/logo.png -->
         <img src="assets/logo.png" alt="Logo Air Corsica" class="logo" />
         <h2>ACARS</h2>
-        <p class="version">v1.0.9</p>
+        <p class="version">v1.0.23</p>
       </div>
 
       <nav class="menu">
@@ -30,34 +26,32 @@
         <button data-section="settings" class="menu-item">⚙️ Paramètres</button>
       </nav>
 
-      <div class="bottom-menu">
-        <button id="logoutBtn" class="logout">Déconnexion</button>
+      <div class="pilot-card">
+        <p id="pilotName">--</p>
+        <p class="status online">🟢 Connecté</p>
       </div>
+
+      <button id="logoutBtn" class="logout">Déconnexion</button>
     </aside>
 
     <!-- ============== Contenu principal ============== -->
     <main class="main-content">
-      <header class="topbar">
-        <div class="pilot-info">
-          <span id="pilotName">--</span>
-          <span id="status" class="status online">🟢 Connecté</span>
-        </div>
-      </header>
-
-      <!-- ======= SECTION : Tableau de bord ======= -->
+      <!-- ===== Tableau de bord ===== -->
       <section id="dashboard" class="section active">
-        <div class="map-container">
-          <div id="map"></div>
+        <div class="dashboard">
+          <div id="map" class="map"></div>
 
-          <!-- Overlay stats -->
-          <div class="flight-overlay">
+          <!-- Overlay infos vol -->
+          <div class="info-pilote">
             <h3>✈️ Suivi du vol</h3>
-            <p><strong>Durée :</strong> <span id="stat-duration">0:00</span></p>
-            <p><strong>Distance :</strong> <span id="stat-distance">0 nm</span></p>
-            <p><strong>Vitesse max :</strong> <span id="stat-maxspeed">0 kts</span></p>
-            <p><strong>Altitude max :</strong> <span id="stat-maxalt">0 ft</span></p>
-            <p><strong>Carburant :</strong> <span id="stat-fuel">--</span></p>
-            <p><strong>Phase :</strong> <span id="stat-phase">Aucune</span></p>
+            <ul>
+              <li><strong>Durée :</strong> <span id="stat-duration">0:00</span></li>
+              <li><strong>Distance :</strong> <span id="stat-distance">0 nm</span></li>
+              <li><strong>Vitesse max :</strong> <span id="stat-maxspeed">0 kts</span></li>
+              <li><strong>Altitude max :</strong> <span id="stat-maxalt">0 ft</span></li>
+              <li><strong>Carburant :</strong> <span id="stat-fuel">--</span></li>
+              <li><strong>Phase :</strong> <span id="stat-phase">Aucune</span></li>
+            </ul>
           </div>
 
           <!-- Overlay logs -->
@@ -66,7 +60,7 @@
             <div id="flightLog"></div>
           </div>
 
-          <!-- HUD dynamique -->
+          <!-- HUD -->
           <div id="hud">
             <div>🧭 Cap : <span id="hud-heading">000°</span></div>
             <div>💨 Vitesse : <span id="hud-speed">0 kts</span></div>
@@ -76,7 +70,7 @@
         </div>
       </section>
 
-      <!-- ======= SECTION : Vols assignés ======= -->
+      <!-- ===== Vols assignés ===== -->
       <section id="flights" class="section">
         <h2>Vols assignés</h2>
         <div id="flightsList" class="card">
@@ -84,7 +78,7 @@
         </div>
       </section>
 
-      <!-- ======= SECTION : Chat ======= -->
+      <!-- ===== Chat ===== -->
       <section id="chat" class="section">
         <h2>Chat pilote</h2>
         <div class="chat-container">
@@ -96,7 +90,7 @@
         </div>
       </section>
 
-      <!-- ======= SECTION : Paramètres ======= -->
+      <!-- ===== Paramètres ===== -->
       <section id="settings" class="section">
         <h2>Paramètres</h2>
         <p>Clé API : <span id="apiKeyDisplay">Non définie</span></p>
@@ -104,7 +98,7 @@
     </main>
   </div>
 
-  <!-- Libs -->
+  <!-- Librairies JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-rotatedmarker@0.2.0/leaflet.rotatedMarker.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
