--- a/index.html
+++ b/index.html
@@ -106,5 +106,12 @@
 
   <!-- Script principal -->
   <script src="renderer.js"></script>
+  <!-- 🔔 Notification de mise à jour -->
+<div id="update-banner" class="update-banner hidden">
+  <div class="update-content">
+    <span>🚀 Nouvelle version disponible !</span>
+    <button id="update-now-btn">Mettre à jour maintenant</button>
+  </div>
+</div>
 </body>
 </html>
