--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <section id="dashboard" class="section active">
         <div class="dashboard">
           <div id="map" class="map"></div>
+		  <button id="overlayToggle" class="overlay-toggle">Afficher/Masquer infos</button>
 
           <!-- Overlay infos vol -->
           <div class="info-pilote">
